[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scenes/templates/alphabet_template.gd" id="1_ao171"]
[ext_resource type="Texture2D" path="res://graphics/alphabet/Ø¬.png" id="2_lqlil"]
[ext_resource type="PackedScene" path="res://scenes/touch.tscn" id="3_ft3ef"]
[ext_resource type="Script" path="res://scenes/touch.gd" id="4_7u2cp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a56qw"]
size = Vector2(96, 96)

[node name="Alphabet" type="CharacterBody2D"]
script = ExtResource("1_ao171")
offset = 100
default_v_y = 100
fast_v_y = 500
is_contain = true
ord_num = 1580

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_a56qw")

[node name="Border" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(0.85, 0.85)
texture = ExtResource("2_lqlil")

[node name="Image" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_lqlil")

[node name="Touch" type="Node" parent="." instance=ExtResource("3_ft3ef")]
script = ExtResource("4_7u2cp")
MAX_DIAGONAL_SLOPE = 1.3

[node name="LeftRay" type="RayCast2D" parent="."]
target_position = Vector2(-86, 47)
collision_mask = 4
collide_with_areas = true

[node name="RightRay" type="RayCast2D" parent="."]
target_position = Vector2(85, 50)
collision_mask = 4
collide_with_areas = true

[connection signal="swiped" from="Touch" to="." method="_on_touch_swiped" flags=18]
